# projetcoca3

code/: CMakeLists.txt  Makefile  README  doxygen.config  graphProblemSolver-sol
code/examples/: graphUsage.c
code/graphs/: bipartite.dot  line.dot  not-maximal.dot  silly.dot  someGraph.dot  someGraphBis.dot  someGraphTer.dot  star.dot
code/graphs/difficiles/: A_42_9.dot  B_42_9.dot  C_42_9.dot  G_100_8.dot  R_100_8.dot  S_100_8.dot  big.dot
code/graphs/faciles/: A_100_4.dot  A_42_6.dot  B_100_4_diff.dot  C_100_5.dot  D_100_5.dot  E_100_5_diff.dot  H_42_7.dot  I_42_7.dot  Z_42_4.dot
code/graphs/moyens/: F_100_6.dot  J_42_8.dot  L_100_6.dot  M_42_8.dot  N_100_6.dot  O_100_7.dot  W_42_8.dot  X_100_7.dot  X_42_8.dot
code/graphs/small_instances/: cycle_2.dot  cycle_taille_3.dot  path.dot  taille_20_A_diff.dot  taille_20_B.dot  taille_30_A.dot  taille_30_B.dot  taille_40_A_diff.dot
code/include/EdgeConProblem/: EdgeConGraph.h  EdgeConReduction.h  EdgeConResolution.h
code/include/main/: Graph.h  Parsing.h  Z3Tools.h
code/src/EdgeConProblem/: EdgeConGraph.c  EdgeConReduction.c  EdgeConResolution.c  list.c  list.h  listImp.c  listImp.h
code/src/main/: Graph.c  Z3Tools.c  main.c
code/src/parser/: Lexer.c  Lexer.h  Lexer.l  Parser.c  Parser.h  Parser.y
code/src/parser/include/: GraphList.h  GraphListToGraph.h  NodeList.h
code/src/parser/src/: GraphListToGraph.c  NodeList.c
